<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <!-- Animated Waves Background -->

    <!-- App Logo -->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieWaves"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/intro_wave_animation"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="235dp"
        android:layout_height="100dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/wave_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Welcome Title -->

    <!-- Tagline -->

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:fontFamily="@font/archivo_medium"
        android:text="@string/welcome_to_wave"
        android:textColor="#0086FF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/tagline"
        android:textColor="#0086FF"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/archivo_medium"
        android:text="@string/get_started"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagline"
        tools:layout_editor_absoluteY="730dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
